Added statistics functions.

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -32,6 +32,21 @@ E = mc^2
     \label{default-label}
 \end{figure}
 
+\begin{table}[h!]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+Column 1 & Column 2 & Column 3 \\
+\hline
+Data 1 & Data 2 & Data 3 \\
+Data 4 & Data 5 & Data 6 \\
+Data 7 & Data 8 & Data 9 \\
+\hline
+\end{tabular}
+\caption{Example Table}
+\label{example-table}
+\end{table}
+
 \clearpage
 \input{reference.tex}
 
