--- a/src/DataProcessing.ipynb
+++ b/src/DataProcessing.ipynb
@@ -3308,7 +3308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3870,7 +3870,7 @@
     "imputer_encoders = [\n",
     "    ColumnTransformer(\n",
     "        [(\"num_imputer\", num_imputer, num_cols),\n",
-    "         (\"num_boolean\", num_boolean_imputer, num_cols_boolean),\n",
+    "         (\"num_boolean\", num_boolean_imputer, num_boolean_cols),\n",
     "         (\"cat_on_imputer\", cat_oh_imputer, cat_oh_cols),\n",
     "         (\"cat_sim_imputer\", cat_sim_imputer, cat_sim_cols),\n",
     "         (\"cat_oh_encoder\", cat_oh_encoder, cat_oh_cols),\n",
