--- a/doc/main.tex
+++ b/doc/main.tex
@@ -10,6 +10,10 @@
 \usepackage{amsmath}    % For advanced math formatting
 \usepackage{amssymb}    % For additional math symbols
 \usepackage{amsfonts}   % For math fonts like \mathbb
+% \usepackage{listings}
+% \usepackage{titlesec}
+% \titleformat{\section}{\normalfont\large\bfseries}{\thesection}{1em}{}
+
 
 
 
